--- a/styles.css
+++ b/styles.css
@@ -90,7 +90,7 @@ footer {
     padding: 20px;
     background-color: #162447; /* Footer background color */
     position: relative;
-    margin-top: 0px; /* Adds space above footer */
+    margin-top: 10px 0; /* Adds space above footer */
 }
 
 footer p {
